[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/game_objects/Tetromino/Tetromino.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game_objects/pieces/o_piece/O_Piece.gd" type="Script" id=2]

[node name="O_Piece" instance=ExtResource( 1 )]
script = ExtResource( 2 )
_colour = Color( 0.886275, 0.843137, 0.203922, 1 )

[node name="BlockA" parent="." index="0"]
position = Vector2( -30, -30 )

[node name="BlockB" parent="." index="1"]
position = Vector2( 0, -30 )

[node name="BlockC" parent="." index="2"]
position = Vector2( -30, 0 )
